Bug 411005 - "both Dvorak and QWERTY keybindings active in text fields when using dvorak layout" [p=lolkaantimat@gmail.com (Evgeniy Ivanov [powerfox]) r+sr=roc a1.9=schrep]