widget/src/gtk2/nsNativeKeyBindings.cpp
@@ -294,19 +294,21 @@ nsNativeKeyBindings::KeyPress(const nsNativeKeyEvent& aEvent,
 
   gHandled = PR_FALSE;
 
+  gtk_bindings_activate(GTK_OBJECT(mNativeTarget),
+                        keyCode, GdkModifierType(modifiers));
+
+/* gtk_bindings_activate_event is preferable, but it has unresolved bug: http://bugzilla.gnome.org/show_bug.cgi?id=162726
+Also gtk_bindings_activate may work with some non-shortcuts operations (todo: check it)
+See bugs 411005 406407
+
+  Code, which should be used after fixing http://bugzilla.gnome.org/show_bug.cgi?id=162726:
   const nsGUIEvent *guiEvent = static_cast<nsGUIEvent*>(aEvent.nativeEvent);
-
   if (guiEvent &&
-      (guiEvent->message == NS_KEY_PRESS || guiEvent->message == NS_KEY_UP || guiEvent->message == NS_KEY_DOWN) &&
-       guiEvent->nativeMsg)
-    gtk_bindings_activate_event(GTK_OBJECT(mNativeTarget),
-                                static_cast<GdkEventKey*>(guiEvent->nativeMsg)); // used for ctrl+x/c/v shortcuts, see bug 406407
-
-  if (!gHandled)
-    gtk_bindings_activate(GTK_OBJECT(mNativeTarget),
-                          keyCode, GdkModifierType(modifiers)); /* used for non-shortcuts operations (I didn't find the way to remove it and
-                                                                   to make gtk_bindings_activate_event work alone */
-
+     (guiEvent->message == NS_KEY_PRESS || guiEvent->message == NS_KEY_UP || guiEvent->message == NS_KEY_DOWN) &&
+      guiEvent->nativeMsg)
+        gtk_bindings_activate_event(GTK_OBJECT(mNativeTarget),
+                                    static_cast<GdkEventKey*>(guiEvent->nativeMsg));
+*/
   gCurrentCallback = nsnull;
   gCurrentCallbackData = nsnull;
 
